crates/jsonschema-macros/tests/ui/invalid_conflicting_schema_sources.rs
#[jsonschema::validator(path = "schema.json", schema = r#"{"type":"string"}"#)]
struct InvalidConflictingSchemaSources;

fn main() {}
